Fix elements from jumping by making btn and input same size

--- a/assets/style.css
+++ b/assets/style.css
@@ -65,12 +65,14 @@ body {
 
 .myInput {
     letter-spacing: 0.1rem;
-    max-width: 4.7rem;
-    max-height: 3rem;
+    /* max-width: 4.7rem;
+    max-height: 3rem; */
+    /* Stopped all from jumping around by making input same size a button - padding, margin and width */
+    width: 7rem;    
     font-size: 1.5rem;
     text-align: center; 
     border-radius: 5px;
-    padding: 0.2rem;
+    padding: 12px;
     margin: 5px 5px; 
 }
 
